--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
 
 <section id="curriculo">
+	
 <section class="timeline">
     <h2>Curriculo</h2>
 
@@ -51,7 +52,7 @@
         <div class="timeline-date">Universidade da Madeira | 2021 - Atual</div>
 
         <div class="timeline-content">
-            <img src="https://scontent.ffnc1-1.fna.fbcdn.net/v/t1.6435-9/179431565_177422310936237_7099002556486045464_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=be3454&_nc_ohc=Sjcam-PCyVcAX-UyTgo&_nc_ht=scontent.ffnc1-1.fna&oh=00_AfDMJVdAALJ0t6w5Y_2ydLGdH1gMe9Orev-NxmQ85uDBBQ&oe=65970E08" alt="UMa">
+            <img src="https://infoalunos.uma.pt/hydra/img/logo_uma_branco.png" alt="UMa">
 
             <div class="text-content">
                 <h2>Licenciatura - Engenharia Eletrónica e Telecomunicações</h2>
