--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="timeline-date">Universidade da Madeira | 2021 - Atual</div>
 
         <div class="timeline-content">
-            <img src="https://infoalunos.uma.pt/hydra/img/logo_uma_branco.png" alt="UMa">
+            <img src="https://static.docsity.com/media/avatar/universities/15189.png" alt="UMa">
 
             <div class="text-content">
                 <h2>Licenciatura - Engenharia Eletrónica e Telecomunicações</h2>
@@ -89,7 +89,7 @@
         <div class="timeline-date">Cisco Networking Academy - Setembro de 2023</div>
 
         <div class="timeline-content">
-            <img src="https://scontent.ffnc1-1.fna.fbcdn.net/v/t39.30808-1/353461709_643348397824707_9212393541022891018_n.png?stp=dst-png_p320x320&_nc_cat=103&ccb=1-7&_nc_sid=596444&_nc_ohc=hoTWpfiBtGUAX9Bqiy3&_nc_ht=scontent.ffnc1-1.fna&oh=00_AfCalsy60bQWmYlNrVAPaoTEdrui3MXTkspcFE1culaUzg&oe=6574D4BA" alt="CISCO">
+            <img src="https://cist.fmi.uni-sofia.bg/sites/default/files/cisco_logo_large.png" alt="CISCO">
 
             <div class="text-content">
                 <h2>NDG Linux Unhatched course in the Cisco Networking Academy</h2>
