--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	
 <section class="timeline">
     <h2>Curriculo</h2>
-	<a href="files/digitalgarage_certificate.pdf" download="TiagoHenriquePereiraAbreu.pdf" class="download-button">
+	<a href="files/digitalgarage_certificate.pdf" class="download-button"> <!--- download="TiagoHenriquePereiraAbreu.pdf"--->
 		<i class="fas fa-download"></i> Versão completa
 	</a>
 
