--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <div class="biography-container">
     <p class="biography"><i class="fas fa-map-marker-alt"></i> Ilha da Madeira, Portugal <br><br>
-	Aluno de Engenharia Eletrónica e Telecomunicações na Universidade da Madeira
+	Licenciado em Engenharia Eletrónica e Telecomunicações na Universidade da Madeira <br>
+	Membro Estudante da Ordem dos Engenheiros
 	</p>
 	
 </div>
