--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	  <input type="hidden" name="_captcha" value="false">
 
 	  <!-- Redireciona após o envio (opcional) -->
-	  <input type="hidden" name="_next" value="https://teusite.github.io/obrigado.html">
+	  <input type="hidden" name="_next" value="/#contato">
 
 	  <button type="submit">Enviar</button>
 	</form>
