--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Tiago Abreu - Home</title>
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Biblioteca para icones dos botões -->
-  <link rel="stylesheet" href="CSS/curriculo.css">
-  <link rel="stylesheet" href="CSS/form.css">
+  
   </head>
   <body>
 
@@ -41,8 +40,8 @@
 
 
 <div class="button-list">
+	<a href="#sobre" class="button"><i class="fas fa-user"></i> Sobre</a>
     <a href="#curriculo" class="button"><i class="fa fa-file-text"></i>Currículo</a>
-    <a href="#sobre" class="button"><i class="fas fa-user"></i> Sobre</a>
     <a href="#contato" class="button"><i class="fas fa-envelope"></i> Contato</a>
 </div>
 
@@ -69,114 +68,118 @@
 <section id="curriculo">
 	
 <section class="timeline">
-    <h2>Curriculo</h2>
+    <h2>Currículo</h2>
 	<a href="files/digitalgarage_certificate.pdf" class="download-button"> <!--- download="TiagoHenriquePereiraAbreu.pdf"--->
 		<i class="fas fa-download"></i> Versão completa
 	</a>
 
+	<section class="timeline">
+		<h2>Formação académica</h2>
 
+		<div class="timeline-item">
+			<div class="timeline-date">Universidade da Madeira | 2025 - Atual</div>
 
-    <section class="timeline">
-    <h2>Formação académica</h2>
+			<div class="timeline-content">
+				<img src="https://static.docsity.com/media/avatar/universities/15189.png" alt="UMa">
 
-	<div class="timeline-item">
-        <div class="timeline-date">Universidade da Madeira | 2025 - Atual</div>
+				<div class="text-content">
+					<h2>Mestrado - Engenharia Eletrotécnica - Telecomunicações</h2>
+				</div>
+			</div>
+		</div>
+		
+		<div class="timeline-item">
+			<div class="timeline-date">Universidade da Madeira | 2021 - 2024</div>
 
-        <div class="timeline-content">
-            <img src="https://static.docsity.com/media/avatar/universities/15189.png" alt="UMa">
+			<div class="timeline-content">
+				<img src="https://static.docsity.com/media/avatar/universities/15189.png" alt="UMa">
 
-            <div class="text-content">
-                <h2>Mestrado - Engenharia Eletrotécnica - Telecomunicações</h2>
-            </div>
-        </div>
-    </div>
-	
-    <div class="timeline-item">
-        <div class="timeline-date">Universidade da Madeira | 2021 - 2024</div>
-
-        <div class="timeline-content">
-            <img src="https://static.docsity.com/media/avatar/universities/15189.png" alt="UMa">
-
-            <div class="text-content">
-                <h2>Licenciatura - Engenharia Eletrónica e Telecomunicações</h2>
-                <p> Desenvolvimento de um projeto para a Semana do Ambiente 2023 da Câmara Municipal do Funchal</p>
-                <p>Competências adquiridas: Matlab · Linux · Linguagem Assembly · C (linguagem de programação) · Análise de circuitos · Xilinx ISE · LTspice · C++ · Python · Verilog</p>
-            </div>
-        </div>
-    </div>
-	
-	
-</section>
+				<div class="text-content">
+					<h2>Licenciatura - Engenharia Eletrónica e Telecomunicações</h2>
+					<a href="SemanaAmbiente.html" class="timeline-link" title="Clique para saber mais sobre este projeto">
+						<p>▶️ Desenvolvimento de um projeto para a Semana do Ambiente 2023 da Câmara Municipal do Funchal - "Cria a tua própria energia".</p>
+					</a>
+					<p>Competências adquiridas: Matlab · Linux · Linguagem Assembly · C (linguagem de programação) · Análise de circuitos · Xilinx ISE · LTspice · C++ · Python · Verilog</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
         
-<section class="timeline">
-    <h2>Experiência profissional</h2>
+	<section class="timeline">
+		<h2>Experiência profissional</h2>
 
-	<div class="timeline-item">
-        <div class="timeline-date">Blin Control - Setembro de 2025 - Atual</div>
+		<div class="timeline-item">
+			<div class="timeline-date">Blin Control - Setembro de 2025 - Atual</div>
 
-        <div class="timeline-content">
-            <img src="https://scontent.ffnc1-1.fna.fbcdn.net/v/t39.30808-1/340836751_594001629443047_3457854303463396190_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=38CjbTl9qWcQ7kNvwFBEeNA&_nc_oc=AdlLTrzPQUkbqSm6AyYExOiJnmgB7WwgI_BgCCg3unw6oLzr-70nj1h6eAHayc2j_M8&_nc_zt=24&_nc_ht=scontent.ffnc1-1.fna&_nc_gid=M_Tte6MG4rUOqAxpxyZmOQ&oh=00_AfQwEx0Q4zKJZ8k0fA7rqZv6L6GXhn6W2WVwfCS0vjG-ZQ&oe=6892D921" alt="BlinControl">
+			<div class="timeline-content">
+				<img src="https://scontent.ffnc1-1.fna.fbcdn.net/v/t39.30808-1/340836751_594001629443047_3457854303463396190_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=38CjbTl9qWcQ7kNvwFBEeNA&_nc_oc=AdlLTrzPQUkbqSm6AyYExOiJnmgB7WwgI_BgCCg3unw6oLzr-70nj1h6eAHayc2j_M8&_nc_zt=24&_nc_ht=scontent.ffnc1-1.fna&_nc_gid=M_Tte6MG4rUOqAxpxyZmOQ&oh=00_AfQwEx0Q4zKJZ8k0fA7rqZv6L6GXhn6W2WVwfCS0vjG-ZQ&oe=6892D921" alt="BlinControl">
 
-            <div class="text-content">
-                <h2>Blin Control - Estágio</h2>
-                <p>Competências adquiridas: Automação</p>
-            </div>
-        </div>
-    </div>
+				<div class="text-content">
+					<h2>Blin Control - Estágio</h2>
+					<p>Competências adquiridas: Automação</p>
+				</div>
+			</div>
+		</div>
 	
 	
-<a href="arditi-estagio.html" class="timeline-link">
-    <div class="timeline-item">
-        <div class="timeline-date">ARDITI - Julho de 2023</div>
+		<a href="arditi-estagio.html" class="timeline-link" title="Clique para saber mais sobre este estágio">
+			<div class="timeline-item">
+				<div class="timeline-date">ARDITI - Julho de 2023</div>
 
-        <div class="timeline-content">
-            <img src="https://media.licdn.com/dms/image/C4E0BAQHHjK1JKoSgkA/company-logo_100_100/0/1630637803116/arditi_pt_logo?e=2147483647&v=beta&t=ROA4tcx49YKGP771AEJ_A6iP9XrrFc6Ov_q5bo-ksiY" alt="ARDITI">
+				<div class="timeline-content">
+					<img src="https://media.licdn.com/dms/image/C4E0BAQHHjK1JKoSgkA/company-logo_100_100/0/1630637803116/arditi_pt_logo?e=2147483647&v=beta&t=ROA4tcx49YKGP771AEJ_A6iP9XrrFc6Ov_q5bo-ksiY" alt="ARDITI">
 
-            <div class="text-content">
-                <h2>ARDITI - Estágio</h2>
-                <p>Competências adquiridas: Impressão 3D · Autodesk Fusion360</p>
-            </div>
-        </div>
-    </div>
-</a>	
-
+					<div class="text-content">
+						<h2>ARDITI - Estágio</h2>
+						<p>Competências adquiridas: Impressão 3D · Autodesk Fusion360</p>
+					</div>
+				</div>
+			</div>
+		</a>
+	</section> <!-- timeline -->
 </section>
 
 
-<section class="timeline">
-    <h2>Licenças e Certificados</h2>
+	<section class="timeline">
+		<h2>Licenças e Certificados</h2>
 
-    <div class="timeline-item">
-        <div class="timeline-date">Cisco Networking Academy - Setembro de 2023</div>
+		<div class="timeline-item">
+			<div class="timeline-date">Cisco Networking Academy - Setembro de 2023</div>
 
-        <div class="timeline-content">
-            <img src="https://cist.fmi.uni-sofia.bg/sites/default/files/cisco_logo_large.png" alt="CISCO">
+			<div class="timeline-content">
+				<img src="https://cist.fmi.uni-sofia.bg/sites/default/files/cisco_logo_large.png" alt="CISCO">
 
-            <div class="text-content">
-                <h2>NDG Linux Unhatched course in the Cisco Networking Academy</h2>
-                <p>Competências adquiridas: Linux</p>
-            </div>
-        </div>
-    </div>
+				<div class="text-content">
+					<h2>NDG Linux Unhatched course in the Cisco Networking Academy</h2>
+					<p>Competências adquiridas: Linux</p>
+					<a href="./files/TiagoAbreu-Introdução ao Li-certificate.pdf" target="_blank" class="download-button"> 
+						<i class="fas fa-up-right-from-square"></i> Certificado
+					</a>
+				</div>
+			</div>
+		</div>
 
-    <div class="timeline-item">
-        <div class="timeline-date">Google Digital Garage - Janeiro de 2023</div>
+		<div class="timeline-item">
+			<div class="timeline-date">Google Digital Garage - Janeiro de 2023</div>
 
-        <div class="timeline-content">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpixy.org%2Fsrc%2F476%2F4766956.png&f=1&nofb=1&ipt=88f862a9590314abb8d881c3c5ec217664ec104dd2aea5c35a4c5bc064f0d6ed&ipo=images" alt="CISCO">
+			<div class="timeline-content">
+				<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpixy.org%2Fsrc%2F476%2F4766956.png&f=1&nofb=1&ipt=88f862a9590314abb8d881c3c5ec217664ec104dd2aea5c35a4c5bc064f0d6ed&ipo=images" alt="CISCO">
 
-            <div class="text-content">
-                <h2>The Fundamentals of Digital Marketing</h2>
-                <p></p>
-            </div>
-        </div>
-    </div>
-</section>
+				<div class="text-content">
+					<h2>The Fundamentals of Digital Marketing</h2>
+					<p>Competências adquiridas: Marketing Digital</p>
+					<a href="./files/digitalgarage_certificate.pdf" target="_blank" class="download-button"> 
+						<i class="fas fa-up-right-from-square"></i> Certificado
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
 
 </section> <!--Fim Section do curriculo -->
 
-</section>
+
 
 
 <section id="contato">
