--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<div class="timeline-date">Blin Control - Setembro de 2025 - Atual</div>
 
 			<div class="timeline-content">
-				<img src="https://scontent.ffnc1-1.fna.fbcdn.net/v/t39.30808-1/340836751_594001629443047_3457854303463396190_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=38CjbTl9qWcQ7kNvwFBEeNA&_nc_oc=AdlLTrzPQUkbqSm6AyYExOiJnmgB7WwgI_BgCCg3unw6oLzr-70nj1h6eAHayc2j_M8&_nc_zt=24&_nc_ht=scontent.ffnc1-1.fna&_nc_gid=M_Tte6MG4rUOqAxpxyZmOQ&oh=00_AfQwEx0Q4zKJZ8k0fA7rqZv6L6GXhn6W2WVwfCS0vjG-ZQ&oe=6892D921" alt="BlinControl">
+				<img src="/img/Blin.jpg" alt="BlinControl">
 
 				<div class="text-content">
 					<h2>Blin Control - Estágio</h2>
@@ -128,7 +128,7 @@
 				<div class="timeline-date">ARDITI - Julho de 2023</div>
 
 				<div class="timeline-content">
-					<img src="https://media.licdn.com/dms/image/C4E0BAQHHjK1JKoSgkA/company-logo_100_100/0/1630637803116/arditi_pt_logo?e=2147483647&v=beta&t=ROA4tcx49YKGP771AEJ_A6iP9XrrFc6Ov_q5bo-ksiY" alt="ARDITI">
+					<img src="/img/arditi.jpeg" alt="ARDITI">
 
 					<div class="text-content">
 						<h2>ARDITI - Estágio</h2>
